--- a/CreateProduct.css
+++ b/CreateProduct.css
@@ -56,10 +56,12 @@ img{
 
 
 /* dr.vet */
+
+/* nav */
 .nav{
     height:13.85rem;
     border-bottom:23px solid #E5E5E5;
-  }
+}
 
 .brand{ 
     height:6.88rem; 
@@ -69,16 +71,14 @@ img{
 } 
 
 .navbarBrand{
-  display:inline-block;
+  /* border:1px solid purple; */
   margin: 0 auto;
-  /* border:1px solid blue; */
-  /* position:absolute;
-  left: 40rem;
-  top:2rem; */
- /* margin-left:38.43rem; */
-}
+  /* width:35%; */
+  /* padding-left:25rem; */
+ }
 
-.totalBrandBtn{
+ .totalBrandBtn{
+  /* border:1px solid purple; */
     display:flex;
     margin-top:2.81rem;
 }
@@ -104,10 +104,9 @@ img{
      font-family:'roboto';
      font-size:1.5rem;
      border:none; 
-     margin-right:1.15rem;
-     white-space:nowrap;
-     /* margin-top:6.37rem */
- }
+     margin-right:1.3rem;
+     white-space:nowrap; 
+  }
 
  .signOutBtn{ 
     background-color:#CB5C5C;
@@ -127,46 +126,62 @@ img{
   height:5.45rem;
   /* background:pink; */
   margin-top:0; 
+  /* border:1px solid blue; */
+  display:flex;
+  align-items:center;
+}
+
+.navbar1{
+  /* border:1px solid red; */
+  margin: 0 auto; 
+  /* text-align:center; */
+}
+
+.navbarTitle{
+  color:#F2AF44 !important;
+  font-weight:800;
+  font-family:'roboto';
+  font-size:1.5rem;
+}
+
+#navbarSupportedContent .nav-link{
+   color:black;
+   font-weight:600;
+   font-family:'roboto';
+   font-size:1.37rem;
 }
 
 
-/* .navList{ */
+@media screen and (max-width: 1000px){
+  .navList{
+    width:100%;
+    height:5.45rem;
     /* background:pink; */
-/* } */
+    margin-top:0; 
+    /* border:1px solid blue; */
+    display:flex;
+    align-items:center;
+  }
 
-/* .brandTitle{ */
-    /* margin-top:1.38rem;
-    border:1px solid red;
-    padding-left:38.45rem;   */
-/* } */
+  .navbar1{
+    /* border:1px solid blue; */
+    margin-left:0rem;
+    /* background:pink; */
+    height:90px;
+    width:100%;
+    display:flex;
+    align-items:center;
+  }
 
-/* .brandInfo{ */
-    /* margin-top:3.38rem;
-    border:1px solid blue;
-    padding-left:24rem; */
-    /* width:200px; */
-/* } 
+  .navbarTitle{
+    /* background:purple; */
+    height:80px;
+    padding-top:2rem;
+  }
+}
 
 
 
 
 
-.descriptionBtn{ */
-   /* margin-right:1.15rem;
-   margin-left:144px;
-   background-color:#F2AF44; */
-   /* border:5px solid red; */
-/* }
 
-.signOutBtn{ */
-    /* background-color:#CB5C5C; */
-    /* padding-right:-20px; */
-/* }
-
-hr{
-    margin-left:-7.5rem;
-} */
-
-/* @media (max-width: 1500px) {
-  
-} */
