--- a/CreateProduct.css
+++ b/CreateProduct.css
@@ -194,67 +194,92 @@ input[type="text"],input[type="number"],.select{
   /* background:pink; */
   width:18.43rem;
   height:1.56rem;
-  border-color:#E5E5E5;
+  border-color: lightgray;
   border-radius: 0rem;
+}
+
+.select{
+  font-size:0.5rem;
 }
 
 .productSupplier{
-  margin-left:1rem;
-  width:10.85rem !important;
+  margin-left:1.1rem;
+  width:12.43rem !important;
 }
 
 .productBrand{
-  margin-left:2rem;
-}
+  margin-left:2.2rem;
+  width:18.70rem !important;
+  }
+
+/* option{
+  color:#F2AF44;
+} */
 
 .inquireBtn{
   background-color:#F2AF44;
-  width:0.1rem;
-  height:0rem;
+  width:2.5rem;
+  height:1.3rem;
   border-radius: 0rem;
   font-size:0.88rem;
-  /* text-align:center; */
   font-weight:400;
   white-space: nowrap;
   line-height:1.03rem;
-  padding-right:2.4rem;
-  /* padding-left:-2rem; */
-  padding-bottom:1rem;
-  padding-top:0.2rem;
+  position:relative;
   margin-left:0.38rem;
   margin-top:0.2rem;
   color:white;
+}
+
+.buttonWord{
+ position:absolute;
+ left:0.38rem;
+ top:0.2rem;
 }
 
 .removeBtn{
   background-color:#F2AF44;
-  width:0.1rem;
-  height:0rem;
+  width:2.5rem;
+  height:1.3rem;
   border-radius: 0rem;
   font-size:0.88rem;
-  /* text-align:center; */
   font-weight:400;
   white-space: nowrap;
   line-height:1.03rem;
-  padding-right:2.4rem;
-  /* padding-left:-2rem; */
-  padding-bottom:1rem;
-  padding-top:0.2rem;
+  position:relative;
   margin-left:0.38rem;
   margin-top:0.2rem;
   color:white;
 }
 
-.commodityAttributesInput{
-  width:10.85rem !important;
+.removeButtonWord{
+  position:absolute;
+  left:0.38rem;
+  top:0.2rem;
 }
 
-/* .buttonWord{
- margin-right:10rem; */
+.commodityAttributesInput{
+  width:12.43rem !important;
+}
+
+.totalBtn{
   /* border:1px solid red; */
-  
-  /* margin:0 auto; */
-/* } */
+  margin-left:1.1rem;
+}
+
+.searchFormBtn{
+  border:1px solid #3E414F;
+  border-radius:0px;
+  width:6.88rem;
+  height:2.18rem;
+  font-size:1.2rem;
+  font-weight:900;
+}
+
+.searchFormBtn:hover{
+  background-color:#F2AF44;
+  border:none;
+}
 
 
 
@@ -262,9 +287,7 @@ input[type="text"],input[type="number"],.select{
 
 
 
-
-
-
+/* media */
 @media screen and (max-width: 1000px){
   .navList{
     width:100%;
