--- a/CreateProduct.css
+++ b/CreateProduct.css
@@ -67,8 +67,8 @@ img{
 .brand{ 
     height:6.88rem; 
     border:1px solid #E5E5E5; 
-    width:100%;   
-    /* border:1px solid green;  */
+    width:100%; 
+   /* border:1px solid green;  */
 } 
 
 .navbarBrand{
@@ -125,7 +125,7 @@ img{
  }
 
 .navbarTitle{
-  color:#F2AF44 !important;
+  /* color:#F2AF44 !important; */
   font-weight:800;
   font-family:'roboto';
   font-size:1.5rem;
@@ -137,6 +137,20 @@ img{
    font-family:'roboto';
    font-size:1.37rem;
 }
+
+.active{
+  color:#F2AF44 !important;
+  position:relative;
+}
+
+ .active::after{
+    content:"";
+    border-bottom:0.5rem solid #F2AF44;
+    position:absolute;
+    width:120px;
+    bottom:-1.77rem;
+    left:-0.8rem;
+ }
 
 /* main */
 .search{
@@ -340,8 +354,12 @@ select::-ms-expand{
 .bottomPagination{
   /* border:1px solid blue; */
   margin-top:0.56rem; 
-  position:absolute;
-  right:2rem;
+  /* position:absolute;
+  right:2rem; */
+  }
+
+.bottomPaginationTitle{
+  opacity:0;
 }
 
 
@@ -493,10 +511,3 @@ select::-ms-expand{
         }
   }
 
-
-
-
-
-
-
- 
